added a shortcut to the registerpage in the navbar

--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -35,9 +35,9 @@
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Alle storingen", "Index", "Storingen")</li>
                                 <li role="presentation" class="divider"></li>
-                                <li>@Html.ActionLink("email testen", "emailtester", "Testers")</li>
-                                <li>@Html.ActionLink("sms testen", "smstester", "Testers")</li>
-                                <li>@Html.ActionLink("producten", "Index", "Producten")</li>
+                                <li>@Html.ActionLink("email functie testen", "emailtester", "Testers")</li>
+                                <li>@Html.ActionLink("sms functie testen", "smstester", "Testers")</li>
+                                <li>@Html.ActionLink("Nieuw account aanmaken", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
                                 <li role="presentation" class="divider"></li>
                                 <li>@Html.ActionLink("Achtergrond taken", "", "Hangfire")</li>
                             </ul>
