added dynamic text for the homepage

--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
                                 <li>@Html.ActionLink("log instellingen", "logging", "Instellingen")</li>
                                 <li>@Html.ActionLink("SMS gateway", "smsgateway", "Instellingen")</li>
                                 <li>@Html.ActionLink("SMTP server", "emailserver", "Instellingen")</li>
+                                <li>@Html.ActionLink("Storingsoverzicht instellingen", "homepage", "Instellingen")</li>
                             </ul>
                         </li>   
                     }
