--- a/UC alert tool/Views/Shared/_SettingsPartial.cshtml
+++ b/UC alert tool/Views/Shared/_SettingsPartial.cshtml
@@ -20,6 +20,9 @@
             <li>
                 <a href="~/instellingen/emailserver" class=""><i class="fa fa-server fa-fw"></i> SMTP server</a>
             </li>
+            <li>
+                <a href="~/instellingen/homepage" class=""><i class="fa fa-server fa-fw"></i> Storingsoverzicht instellingen</a>
+            </li>
         </ul>
     </div>
 </div>
