added a "forgot password" function to the website

--- a/UC alert tool/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/UC alert tool/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewBag.Title = "Herstel mail is verzonden";
 }
 
 <hgroup class="title">
@@ -7,7 +7,7 @@
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Controleer uw mail inbox en herstel uw account.
     </p>
 </div>
 	
