--- a/UC alert tool/Views/Account/ConfirmEmail.cshtml
+++ b/UC alert tool/Views/Account/ConfirmEmail.cshtml
@@ -5,6 +5,6 @@
 <h2>@ViewBag.Title.</h2>
 <div>
     <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+       Bedankt voor het activeren van uw account. @Html.ActionLink("Klik hier om in te loggen", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
