--- a/UC alert tool/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/UC alert tool/Views/Account/ResetPasswordConfirmation.cshtml
@@ -7,6 +7,6 @@
 </hgroup>
 <div>
     <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Uw wachtwoord is gereset. @Html.ActionLink("Klik hier om in te loggen", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
