changed location logfiles for better support for downloading the logfile

--- a/UC alert tool/Views/Instellingen/Logging.cshtml
+++ b/UC alert tool/Views/Instellingen/Logging.cshtml
@@ -25,6 +25,8 @@
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
+            <br />
+            <h4><b>Huidig niveau aanpassen</b></h4>
             <div class="form-group">
                 <label class="control-label col-md-2">Huidig niveau</label>
                 <div class="col-md-10">
