user can now view log files online

--- a/UC alert tool/Views/Instellingen/Logging.cshtml
+++ b/UC alert tool/Views/Instellingen/Logging.cshtml
@@ -19,6 +19,15 @@
 <div class="settingsContentWrapper">
     <h2>Logging</h2>
     <p>Hieronder ziet u uw huidige log niveau, U kunt deze aanpassen of alleen bekijken</p>
+    <h4><b>Download logbestand</b></h4>
+    @foreach (var item in ViewData.Model)
+    {
+        @Html.ActionLink((string)item, "DownloadLog", new { filename = item });
+        <br />
+    }
+
+
+
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
