--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                                 <li>@Html.ActionLink("Instellingen", "Index", "Instellingen")</li>
                                 <li role="presentation" class="divider"></li>
                                 <li>@Html.ActionLink("email template", "emailtemplate", "Instellingen")</li>
-                                <li>@Html.ActionLink("log instellingen", "logging", "Instellingen")</li>
+                                <li>@Html.ActionLink("Logging", "logging", "Instellingen")</li>
                                 <li>@Html.ActionLink("SMS gateway", "smsgateway", "Instellingen")</li>
                                 <li>@Html.ActionLink("SMTP server", "emailserver", "Instellingen")</li>
                                 <li>@Html.ActionLink("Storingsoverzicht instellingen", "homepage", "Instellingen")</li>
