--- a/UC alert tool/Views/Shared/_SettingsPartial.cshtml
+++ b/UC alert tool/Views/Shared/_SettingsPartial.cshtml
@@ -12,7 +12,7 @@
                 <a href="~/instellingen/emailtemplate" class=""><i class="fa fa-address-card fa-fw"></i> email template</a>
             </li>
             <li>
-                <a href="~/instellingen/logging" class=""><i class="fa fa-book fa-fw"></i> log instellingen</a>
+                <a href="~/instellingen/logging" class=""><i class="fa fa-book fa-fw"></i> Logging</a>
             </li>
             <li>
                 <a href="~/instellingen/smsgateway" class=""><i class="fa fa-envelope fa-fw"></i> SMS gateway</a>
