added a new function that will give the user the opertunitie to send a sms or email on a update

--- a/UC alert tool/Views/Rapporteren/MeldingMetEmailEnSMS.cshtml
+++ b/UC alert tool/Views/Rapporteren/MeldingMetEmailEnSMS.cshtml
@@ -26,6 +26,7 @@
                     </div>
                     <div class="col-md-offset-2 col-md-10 maxWidth">
                         <p id="totalCharacters">160/160 karakters</p>
+                        <p id="totalSMSForOneMessage">1 Bericht</p>
                     </div>
                 </div>
             </div>
@@ -63,7 +64,7 @@
                 <div class="form-group">
                     <label class="control-label col-md-2">Onderwerp:</label>
                     <div class="col-md-10">
-                        <input class="form-control" id="previewTitle" />
+                        <input class="form-control" id="previewTitle" readonly/>
                     </div>
                 </div>
                 <div class="form-group">
