--- a/UC alert tool/Views/Rapporteren/MeldingMetEmail.cshtml
+++ b/UC alert tool/Views/Rapporteren/MeldingMetEmail.cshtml
@@ -45,7 +45,7 @@
             <div class="form-group">
                 <label class="control-label col-md-2">Onderwerp:</label>
                 <div class="col-md-10">
-                    <input class="form-control" id="previewTitle"/>
+                    <input class="form-control" id="previewTitle" readonly/>
                 </div>
             </div>
             <div class="form-group">
