--- a/UC alert tool/Views/Storingen/Edit.cshtml
+++ b/UC alert tool/Views/Storingen/Edit.cshtml
@@ -15,9 +15,11 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
         @Html.Partial("_MeldingPartial")
+        @Html.Partial("_partialSMS")
+        @Html.Partial("_partialEmail")
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Opslaan" class="btn btn-default" id="submitbutton" />
+                <input type="submit" value="Opslaan" class="btn btn-success" id="submitbuttonedit" />
             </div>
         </div>  
     </div>
