user can now change the home page text

--- a/UC alert tool/Views/Home/Index.cshtml
+++ b/UC alert tool/Views/Home/Index.cshtml
@@ -7,8 +7,9 @@
 
 <div id="homepageTopWrapper" class="jumbotron text-center" >
     <div id="homepageTop" class="container">
-        <h1 class="jumbotron-heading">UC Systems</h1>
-        <p class="lead">Dit is het overzicht van alle actieve en recente storingen. Alle storingen die nog geen einddatum hebben, zullen worden voozien van updates en een einddatum als deze bekend is bij ons</p>
+        <h1 class="jumbotron-heading">@ViewBag.homepagetitle</h1>
+          
+        <span class="lead">@ViewBag.homepagetext</span>
     </div>
 </div>
 
