--- a/UC alert tool/Views/Shared/_partialEmail.cshtml
+++ b/UC alert tool/Views/Shared/_partialEmail.cshtml
@@ -13,7 +13,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">email body</label>
             <div class="col-md-10">
-                <textarea rows="8" cols="50" class="form-control" id="emailbody" name="emailbody" placeholder="Laat leeg als u geen email wil verzenden"></textarea>
+                <textarea rows="8" cols="50" class="form-control" id="emailbodyedit" name="emailbody" placeholder="Laat leeg als u geen email wil verzenden"></textarea>
             </div>
         </div>
     </div>
