--- a/UC alert tool/Views/Shared/_partialSMS.cshtml
+++ b/UC alert tool/Views/Shared/_partialSMS.cshtml
@@ -7,7 +7,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">sms bericht</label>
             <div class="col-md-10">
-                <textarea rows="8" cols="50"class = "form-control" id="smsbericht" name="smsbericht"  placeholder="Laat leeg als u geen sms wilt verzenden"></textarea>
+                <textarea rows="8" cols="50"class = "form-control" id="smsberichtedit" name="smsbericht"  placeholder="Laat leeg als u geen sms wilt verzenden"></textarea>
             </div>
             <div class="col-md-offset-2 col-md-10 maxWidth smallInformation">
                 <p id="totalCharacters">160/160 karakters</p>
