--- a/UC alert tool/Views/Instellingen/homepage.cshtml
+++ b/UC alert tool/Views/Instellingen/homepage.cshtml
@@ -39,6 +39,19 @@
                     <input type="text" name="OldMessageTime" value="@ViewBag.OldMessageTime" />
                 </div>
             </div>
+            <h4><b>Text boven aan de homepagina</b></h4>
+            <div class="form-group">
+                <label class="control-label col-md-3">homepagina titel</label>
+                <div class="col-md-9">
+                    <input type="text" name="homepagetitle" value="@ViewBag.homepageTitle" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-md-3">homepagina informatie text</label>
+                <div class="col-md-9">
+                    <textarea type="text" name="homepagetext" rows="8" cols="50">@ViewBag.homepageText</textarea>
+                </div>
+            </div>
             <div class="form-group">
                 <div class="col-md-10">
                     <input type="submit" value="Opslaan" class="btn btn-default" />
