--- a/UC alert tool/Views/Shared/_SettingsPartial.cshtml
+++ b/UC alert tool/Views/Shared/_SettingsPartial.cshtml
@@ -9,10 +9,10 @@
             </li>
             <li id="sidebar-divider"></li>
             <li>
-                <a href="~/instellingen/emailtemplate" class=""><i class="fa fa-address-card fa-fw"></i> email template</a>
+                <a href="~/instellingen/emailtemplate" class=""><i class="fa fa-address-card fa-fw"></i> Email template</a>
             </li>
             <li>
-                <a href="~/instellingen/logging" class=""><i class="fa fa-book fa-fw"></i> Logging</a>
+                <a href="~/instellingen/logging" class=""><i class="fa fa-book fa-fw"></i> Log instellingen</a>
             </li>
             <li>
                 <a href="~/instellingen/smsgateway" class=""><i class="fa fa-envelope fa-fw"></i> SMS gateway</a>
@@ -21,7 +21,7 @@
                 <a href="~/instellingen/emailserver" class=""><i class="fa fa-server fa-fw"></i> SMTP server</a>
             </li>
             <li>
-                <a href="~/instellingen/homepage" class=""><i class="fa fa-server fa-fw"></i> Storingsoverzicht instellingen</a>
+                <a href="~/instellingen/homepage" class=""><i class="fa fa-server fa-fw"></i> Homepagina instellingen</a>
             </li>
         </ul>
     </div>
