--- a/UC alert tool/Views/Storingen/Edit.cshtml
+++ b/UC alert tool/Views/Storingen/Edit.cshtml
@@ -17,6 +17,19 @@
         @Html.Partial("_MeldingPartial")
         @Html.Partial("_partialSMS")
         @Html.Partial("_partialEmail")
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4>Overzicht</h4>
+            </div>
+            <div class="panel-body">
+                <div class="form-group">
+                    <label class="control-label col-md-2">Overzicht</label>
+                    <div class="col-md-10">
+                        @Html.TextArea("Summeryfield", "Het bericht op de website zal worden aangepast."+Environment.NewLine +"Er zullen geen sms'jes of emails worden verzonden", 10, 50, new { @readonly = "readonly", htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Opslaan" class="btn btn-success" id="submitbuttonedit" />
