user can now edit the contact details

--- a/UC alert tool/Views/Home/Contact.cshtml
+++ b/UC alert tool/Views/Home/Contact.cshtml
@@ -4,10 +4,7 @@
 <h3>Contact opnemen met UC Systems</h3>
 
 <address>
-    Kade 64<br />
-    3371 EP<br />
-    Hardinxveld-Giessendam<br />
-    088-6666 333
+   @Html.Raw(ViewBag.contactdetails)
 </address>
 
 <address>
