--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -55,6 +55,7 @@
                                 <li>@Html.ActionLink("SMS gateway", "smsgateway", "Instellingen")</li>
                                 <li>@Html.ActionLink("SMTP server", "emailserver", "Instellingen")</li>
                                 <li>@Html.ActionLink("Homepagina instellingen", "homepage", "Instellingen")</li>
+                                <li>@Html.ActionLink("contactpagina instellingen", "contact", "Instellingen")</li>
                             </ul>
                         </li>   
                     }
