--- a/UC alert tool/Views/Shared/_SettingsPartial.cshtml
+++ b/UC alert tool/Views/Shared/_SettingsPartial.cshtml
@@ -9,7 +9,7 @@
             </li>
             <li id="sidebar-divider"></li>
             <li>
-                <a href="~/instellingen/emailtemplate" class=""><i class="fa fa-address-card fa-fw"></i> Email template</a>
+                <a href="~/instellingen/emailtemplate" class=""><i class="fa fa-address-book fa-fw"></i> Email template</a>
             </li>
             <li>
                 <a href="~/instellingen/logging" class=""><i class="fa fa-book fa-fw"></i> Log instellingen</a>
@@ -21,7 +21,10 @@
                 <a href="~/instellingen/emailserver" class=""><i class="fa fa-server fa-fw"></i> SMTP server</a>
             </li>
             <li>
-                <a href="~/instellingen/homepage" class=""><i class="fa fa-server fa-fw"></i> Homepagina instellingen</a>
+                <a href="~/instellingen/homepage" class=""><i class="fa fa-file-text fa-fw"></i> Homepagina instellingen</a>
+            </li>
+            <li>
+                <a href="~/instellingen/contact" class=""><i class="fa fa-address-card fa-fw"></i> Contractpagina instellingen</a>
             </li>
         </ul>
     </div>
