--- a/UC alert tool/Content/SettingsStyle.css
+++ b/UC alert tool/Content/SettingsStyle.css
@@ -29,17 +29,18 @@
   padding-left: 52px;
 }
 @media (min-width: 768px) {
-  .sidebar {
-    position: absolute;
-    width: 200px;
-    margin-top: 0px;
-    float:left;
-    margin-right:15px;
-  }
+    .sidebar {
+        position: absolute;
+        width: 200px;
+        margin-top: 0px;
+        float: left;
+        margin-right: 15px;
+    }
 }
 /*End of sidebar*/  
 .settingsContentWrapper{
     margin-left:250px;
+    min-height:315px;
 }
 
 
