added a message so the user knows the sms and emails are being send. the mobile detection has been improved so "all mobile devices" should be detected now. edited some typo's - on the contact page removed echo on the settings jquery script login checkbox is now in the right location changed  "Achtergrond taken" -> "Achtergrondtaken" on the menu

--- a/UC alert tool/Content/Site.css
+++ b/UC alert tool/Content/Site.css
@@ -61,10 +61,13 @@ textarea{
     font-style:italic;
 }
 #isGeslotenCheckbox{
-    margin-left:0px;
+    margin-left: 0px;
 }
-.fullText{
-    display:none;
+#logincheckbox{
+    margin-left: 0px;
+}
+.fullText {
+    display: none;
 }
 .readmorelink{
     color:blue;
@@ -73,7 +76,7 @@ textarea{
 
 }
 #Summeryfield{
-   max-width:560px;
+   max-width:310px;
 }
 .article{
     padding-left: 0px;
