--- a/UC alert tool/Views/Account/Login.cshtml
+++ b/UC alert tool/Views/Account/Login.cshtml
@@ -36,7 +36,7 @@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
+                            @Html.CheckBoxFor(m => m.RememberMe, new { @id = "logincheckbox" })
                             @Html.LabelFor(m => m.RememberMe,"Onthouden","")
                         </div>
                     </div>
