--- a/UC alert tool/Views/Shared/_MeldingPartial.cshtml
+++ b/UC alert tool/Views/Shared/_MeldingPartial.cshtml
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.ProductID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Productgroep</label>
             <input type="hidden" id="productRecipients" value="@ViewBag.ProductCustomerCount" />
             <div class="col-md-10">
 
