--- a/UC alert tool/Views/Shared/_MeldingPartial.cshtml
+++ b/UC alert tool/Views/Shared/_MeldingPartial.cshtml
@@ -24,9 +24,16 @@
             <label class="control-label col-md-2">Productgroep</label>
             <input type="hidden" id="productRecipients" value="@ViewBag.ProductCustomerCount" />
             <div class="col-md-10">
-
                 @Html.DropDownList("ProductID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ProductID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2">Producttype gebruiken</label>
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.CheckBox("UseProducttype", false, htmlAttributes: new { @class = "check-box" , id = "UseProducttype" })
+                </div>
             </div>
         </div>
 
