fixed a bug that got all the entries in the database instaid of the right ones.

--- a/UC alert tool/Views/Storingen/Details.cshtml
+++ b/UC alert tool/Views/Storingen/Details.cshtml
@@ -72,11 +72,11 @@
             @Html.DisplayFor(model => model.IsGesloten)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Producten.Naam)
+            @Html.DisplayNameFor(model => model.ProductID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Producten.Naam)
+            @Html.DisplayFor(model => model.ProductID)
         </dd>
 
     </dl>
