almost everything is now working - I will change the sorting inside a melding productID on index

--- a/UC alert tool/Views/Instellingen/EmailServer.cshtml
+++ b/UC alert tool/Views/Instellingen/EmailServer.cshtml
@@ -24,6 +24,12 @@
                 </div>
             </div>
             <div class="form-group">
+                <label class="control-label col-md-3">I'am alive emailadres(en)</label>
+                <div class="col-md-9">
+                    <input type="text" name="keepaliveemailaddresses" value=@ViewBag.keepAliveEmailAddresses />
+                </div>
+            </div>
+            <div class="form-group">
                 <div class="col-md-9">
                     <input type="submit" value="Opslaan" class="btn btn-default" />
                 </div>
