--- a/UC alert tool/Views/Instellingen/EmailServer.cshtml
+++ b/UC alert tool/Views/Instellingen/EmailServer.cshtml
@@ -26,7 +26,7 @@
             <div class="form-group">
                 <label class="control-label col-md-3">I'am alive emailadres(en)</label>
                 <div class="col-md-9">
-                    <input type="text" name="keepaliveemailaddresses" value=@ViewBag.keepAliveEmailAddresses />
+                    <input type="text" name="keepaliveemailaddresses" value="@ViewBag.alertMailAdres" />
                 </div>
             </div>
             <div class="form-group">
