--- a/UC alert tool/Views/Instellingen/Hangfire.cshtml
+++ b/UC alert tool/Views/Instellingen/Hangfire.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="settingsContentWrapper">
     <h2>Database instellingen</h2>
-    <p>Hier kunt u instellingen aanpassen met betrekking tot de Hangfire functie</p>
+    <p>Hier kunt u de instellingen van de database synchronisatie aanpassen </p>
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
