--- a/UC alert tool/Views/Instellingen/Index.cshtml
+++ b/UC alert tool/Views/Instellingen/Index.cshtml
@@ -6,9 +6,13 @@
 <div class="settingsContentWrapper">
     <h2>Hallo welkom op de instellingen pagina</h2>
     <p>Gebruik de linker navigatiebalk om instellingen aan te passen</p>
-    <p>Gebruik het tabje 'Log instellingen' om het log niveau aan te passen</p>
+    <p>Onder 'Database synchronisatie' kunt u aangeven om de hoeveel uur de database gesynchroniseerd wordt</p>
+    <p>De emailtemplate kunt u aanpassen onder het tabje 'Emailtemplate'</p>
+    <p>Gebruik het tabje 'Log instellingen' om het log niveau aan te passen en bestaande logboeken te bekijken</p>
     <p>Onder 'SMS gateway' kunt u de server gegevens aanpassen die betrekking hebben op sms gateway</p>
     <p>Onder 'SMTP server' kunt u de server aanpassen die wordt gebruikt voor het versturen van de emails</p>
+    <p>Bij 'Homepagina intellingen' kunt u de text op de homepagina aanpassen</p>
+    <p>U kunt de contactgegevens aanpassen onder 'Contactpagina instellingen'</p>
     <p>Tevens zijn al deze tabjes ook te vinden onder het tabje 'instellingen' boven in de navigatiebalk</p>
 </div>
 
