--- a/UC alert tool/Views/Instellingen/contact.cshtml
+++ b/UC alert tool/Views/Instellingen/contact.cshtml
@@ -5,8 +5,8 @@
 
 }
 <div class="settingsContentWrapper">
-    <h2>contact pagina instellingen</h2>
-    <p>Hier kunt u de instellingen van de contact pagina aanpassen</p>
+    <h2>Contactpagina instellingen</h2>
+    <p>Hier kunt u de instellingen van de contactpagina aanpassen</p>
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
