--- a/UC alert tool/Views/Instellingen/emailtemplate.cshtml
+++ b/UC alert tool/Views/Instellingen/emailtemplate.cshtml
@@ -5,7 +5,7 @@
  }
 <div class="settingsContentWrapper">
 
-    <h2>email template aanpassen</h2>
+    <h2>Email template aanpassen</h2>
 
     @using (Html.BeginForm("emailtemplate","Instellingen",FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
