--- a/UC alert tool/Views/Instellingen/smsgateway.cshtml
+++ b/UC alert tool/Views/Instellingen/smsgateway.cshtml
@@ -4,8 +4,8 @@
     @Html.Partial("_SettingsPartial")
 }
 <div class="settingsContentWrapper">
-    <h2>Server instellingen</h2>
-    <p>Hieronder kunt u de gegevens aanpassen van de sms gateway</p>
+    <h2>SMS-server instellingen</h2>
+    <p>Hieronder kunt u de gegevens aanpassen van de sms server</p>
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
