--- a/UC alert tool/Views/Shared/_SettingsPartial.cshtml
+++ b/UC alert tool/Views/Shared/_SettingsPartial.cshtml
@@ -27,7 +27,7 @@
                 <a href="~/instellingen/homepage" class=""><i class="fa fa-file-text fa-fw"></i> Homepagina instellingen</a>
             </li>
             <li>
-                <a href="~/instellingen/contact" class=""><i class="fa fa-address-card fa-fw"></i> Contractpagina instellingen</a>
+                <a href="~/instellingen/contact" class=""><i class="fa fa-address-card fa-fw"></i> Contactpagina instellingen</a>
             </li>
         </ul>
     </div>
