--- a/UC alert tool/Views/Instellingen/Logging.cshtml
+++ b/UC alert tool/Views/Instellingen/Logging.cshtml
@@ -17,7 +17,7 @@
 }
 
 <div class="settingsContentWrapper">
-    <h2>Logging</h2>
+    <h2>Log instellingen en logboeken</h2>
     <p>Hieronder ziet u uw huidige log niveau, U kunt deze aanpassen of alleen bekijken</p>
     <h4><b>Download logbestand</b></h4>
     @foreach (var item in ViewData.Model)
@@ -25,7 +25,6 @@
         @Html.ActionLink((string)item, "DownloadLog", new { filename = item });
         <br />
     }
-
 
 
     @using (Html.BeginForm())
