--- a/UC alert tool/Views/Storingen/Delete.cshtml
+++ b/UC alert tool/Views/Storingen/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model UC_alert_tool.Models.Storingen
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Verwijderen";
 }
 
-<h2>Delete</h2>
+<h2>Verwijderen</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Weet u zeker dat u dit item wilt verwijderen?</h3>
 <div>
-    <h4>Storingen</h4>
+    <h4>Storing</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -61,14 +61,21 @@
         <dd>
             @Html.DisplayFor(model => model.IsGesloten)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ProductID)
+        </dd>
     </dl>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Verwijderen" class="btn btn-default" /> |
+            @Html.ActionLink("Terug naar overzicht", "Index")
         </div>
     }
 </div>
